sidebar: z-index fix

--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     height: 100%;
     background: $nav-grey-3;
-    z-index: 1;
+    z-index: 3;
 
     @include transition(width $menu-transition-duration ease);
 
